Fix overflow issue.

--- a/resources/scss/Home.scss
+++ b/resources/scss/Home.scss
@@ -13,9 +13,7 @@
   &.with-messages {
     justify-content: space-between;
     padding-top: 2rem;
-
-    gap: 0rem;
-
+    gap: 0;
     height: calc(100vh - 4rem);
   }
 }
